--- a/README.adoc
+++ b/README.adoc
@@ -9,7 +9,7 @@ follow https://12factor.net/[The Twelve-Factor App] methodology and are ready to
 == Getting Started
 * Install https://maven.apache.org/install.html[Maven] and https://docs.docker.com/install/[Docker]
 * Access to https://azure-spring-cloud.azurewebsites.net/[azure-spring-cloud.azurewebsites.net]
-* Sign in with your Azure subscription. If you don't have a Azure subscription get a [https://azure.microsoft.com/en-us/free/]free one.
+* Sign in with your Azure subscription. If you don't have a Azure subscription get a https://azure.microsoft.com/en-us/free/[free one].
 * Select the modules you'd like to start with and generate the project.
 * Extract and go to project root directory, run the following:
 ```
@@ -19,7 +19,7 @@ run.cmd (run.sh)
 * After all microservices start, access gateway endpoint at http://localhost:9999
 
 == Deploy to Azure
-TBD
+link:DEPLOY_TO_AZURE.adoc[Deploy Spring Cloud Playground to Azure]
 
 == Architecture
 TBD
